docs: Update java-String